Started working on tauri desktop app for interacting with noldarim server
